# C_Beginner_MiniProjects

./: CMakeLists.txt  README.md
DynamicGPACalculator/: DynamicGPACalculator.c  README.md
GPACalculator/: GPACalculator.c  README.md
bmicalculator/: BMICalculator.c  README.md
bubblesort/: BubbleSort.c  README.md
coinflip/: CoinFlip.c  README.md
factorial/: Factorial.c  README.md
fibonacci/: Fibonacci.c  README.md
helloworld/: README.md
inputage/: InputAge.c  README.md
inputfullname/: InputFullName.c  README.md
student/: README.md  Student.c
swapvariables/: README.md  SwapVariables.c
